--- a/Site-movePlus/css/style.css
+++ b/Site-movePlus/css/style.css
@@ -125,7 +125,7 @@ nav ul li{
     color: rgba(56, 56, 56, 0.808);
 }
 
-.risca{
+.sublinhado{
     background-color: #00D3FF;;
     height: 2px;
     width: 12%;
@@ -289,7 +289,7 @@ nav ul li{
     flex-direction: column;
 }
 
-.teste > div{
+.bloco-time > div{
     margin: 10px;    
     padding: 20px;
     flex: 1;
@@ -302,14 +302,14 @@ nav ul li{
     justify-content: end;
 }
 
-.teste > div > p{
+.bloco-time > div > p{
     font-size: 0.8rem;
     text-transform: uppercase;
     font-weight: 500;
     letter-spacing: .2rem;
 }
 
-.teste > div > h3{
+.bloco-time > div > h3{
     font-size: 2rem;
     line-height: 1.3em;
     font-family: 'Roboto', sans-serif;
