--- a/projeto/Dashboard/dashboard/css/cadastro.css
+++ b/projeto/Dashboard/dashboard/css/cadastro.css
@@ -14,8 +14,8 @@
 
 .flex-profile .flex .cards-profile .cadMachine button {
   border-radius: 5px;
-  background-color: #3d3d3d;
-  color: white;
+  background-color: white;
+  color: #3d3d3d;
   box-shadow: 2px 3px 6px #3d3d3d3b;
   width: 100%;
   height: 52px;
@@ -43,11 +43,58 @@
 
 .flex-profile .flex .cards-profile .card {
   width: 100%;
-  height: 200px;
+  height: 250px;
   background-color: white;
   box-shadow: 2px 3px 6px #3d3d3d1e;
   margin: 10px 0;
   border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-profile .flex .cards-profile .card .txtCard {
+  height: 25%;
+  margin: 1px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.flex-profile .flex .cards-profile .card .txtCard h3 {
+  font-weight: 500;
+  font-size: 18px;
+  color: #3d3d3d;
+}
+
+.flex-profile .flex .cards-profile .card .img-card {
+  height: 45%;
+  margin: 1px;
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.flex-profile .flex .cards-profile .card .img-card .border-radius {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3d3d3d10;
+}
+
+.flex-profile .flex .cards-profile .card .img-card img {
+  width: 40px;
+  height: 40px;
+}
+
+.icon {
+  height: 25%;
+  padding: 0 25px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 @media (min-width: 900px) {
