--- a/projeto/Dashboard/Login/css/style.css
+++ b/projeto/Dashboard/Login/css/style.css
@@ -2,11 +2,11 @@
   margin: 0;
   padding: 0;
   outline: 0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 body {
-  background-image: url("../img/Background-login.png");
+  background-image: url('../img/Background-login.png');
   background-repeat: no-repeat;
 }
 
@@ -225,7 +225,7 @@ input {
 }
 
 .copy::before {
-  content: "";
+  content: '';
   display: inline-block;
   width: 100%;
   height: 1px;
@@ -298,6 +298,7 @@ input {
 .form-group {
   position: relative;
   display: flex;
+  margin: 15px 0;
   align-items: center;
 }
 
@@ -412,4 +413,16 @@ label {
     -webkit-transform: rotate(450deg);
     transform: rotate(450deg);
   }
+}
+
+.msgValidation {
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  color: rgb(163, 15, 15);
+  display: none;
+}
+
+.ativaValidation {
+  display: block;
 }
