Banco no azure + design menu + cadastros funcionando

--- a/projeto/Dashboard/dashboard/css/profile.css
+++ b/projeto/Dashboard/dashboard/css/profile.css
@@ -160,7 +160,7 @@
   }
 
   .flex-profile > div::before {
-    content: "";
+    content: '';
     display: flex;
     width: 100%;
     height: 1px;
