--- a/projeto/Dashboard/Login/css/style.css
+++ b/projeto/Dashboard/Login/css/style.css
@@ -426,3 +426,14 @@ label {
 .ativaValidation {
   display: block;
 }
+
+select {
+  border-radius: 5px;
+  box-sizing: border-box;
+  border: solid 1px #3d3d3d1e;
+  box-shadow: 2px 3px 10px #3d3d3d17;
+  color: #3d3d3d71;
+  font-size: 16px;
+  padding: 15px;
+  outline: 0;
+}
