--- a/projeto/Dashboard/dashboard/css/desktop.css
+++ b/projeto/Dashboard/dashboard/css/desktop.css
@@ -30,8 +30,8 @@
   nav > ul > .logo {
     display: flex;
     width: 100%;
-    justify-content: center;
-    margin: 0 0 40px 0;
+    justify-content: flex-start !important;
+    margin: 0 0 40px 20px;
     padding: 0;
   }
 
@@ -41,7 +41,7 @@
   }
 
   nav > ul > .logo img {
-    width: 200px;
+    width: 150px;
   }
 
   nav > ul > li > a > img {
@@ -57,7 +57,7 @@
     position: absolute;
     right: 0;
     top: 0;
-    height: 100vh;
+    height: auto;
     width: calc(100% - 300px);
     display: flex;
   }
@@ -91,7 +91,7 @@
   }
 
   .container-flex > .flex-station > .viewMachines::before {
-    content: "";
+    content: '';
     width: 100%;
     height: 1px;
     background-color: #3d3d3d21;
@@ -121,7 +121,11 @@
 
   .container-flex > .flex-station > .viewMachines > h3 {
     margin-top: 20px;
-    text-shadow: 2px 3px 5px #3d3d3d2d;
+  }
+
+  .img-menu-profile {
+    margin-left: 30px !important;
+    display: block !important;
   }
 
   .container-flex > .flex-station > .graph::before {
@@ -186,7 +190,7 @@
   }
 
   footer::before {
-    content: "";
+    content: '';
     margin: -20px 60px;
     height: 1px;
     background-color: #3d3d3d2f;
