--- a/projeto/Dashboard/dashboard/css/cadastro.css
+++ b/projeto/Dashboard/dashboard/css/cadastro.css
@@ -14,9 +14,9 @@
 
 .flex-profile .flex .cards-profile .cadMachine button {
   border-radius: 5px;
-  background-color: white;
-  color: #3d3d3d;
-  box-shadow: 2px 3px 6px #3d3d3d3b;
+  color: white;
+  background-color: #3d3d3d;
+  border: solid 1px #3d3d3d !important;
   width: 100%;
   height: 52px;
   font-size: 16px;
@@ -30,7 +30,7 @@
   border-radius: 5px;
   background-color: white;
   color: #3d3d3d;
-  box-shadow: 2px 3px 6px #3d3d3d3b;
+  border: solid 1px #3d3d3d42 !important;
   width: 100%;
   height: 52px;
   font-size: 14px;
@@ -124,14 +124,9 @@
     flex-wrap: wrap;
   }
 
-  .flex-profile .flex .cards-profile .cadMachine button {
-    width: 58%;
+  .flex-profile .flex .cards-profile .cadMachine {
+    gap: 10px;
     margin-right: 5px;
-  }
-
-  .flex-profile .flex .cards-profile .cadMachine input {
-    width: 28%;
-    margin-left: 10px;
   }
 
   .btn-filtro {
