--- a/projeto/Dashboard/dashboard/css/profile.css
+++ b/projeto/Dashboard/dashboard/css/profile.css
@@ -8,13 +8,13 @@
 }
 
 .flex-profile .viewProfile h3 {
-  color: rgb(255, 255, 255);
+  color: #3d3d3d;
   font-size: 30px;
   margin: 0 0 10px 0;
 }
 
 .flex-profile .viewProfile p {
-  color: rgba(255, 255, 255, 0.705);
+  color: #3d3d3d;
   font-size: 18px;
   margin: 0 0 10px 0;
   text-shadow: 2px 3px 5px #3d3d3d2d;
@@ -104,6 +104,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 10px;
 }
 
 /* ------------------- */
