--- a/projeto/Dashboard/dashboard/css/desktop.css
+++ b/projeto/Dashboard/dashboard/css/desktop.css
@@ -229,7 +229,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  height: 52px;
+  height: 59px;
   border-radius: 5px;
   margin-left: 20px;
 }
@@ -239,30 +239,30 @@
 }
 
 .profile-teste {
-  background-color: white;
+  background-color: #3d3d3d;
+  color: white;
   box-shadow: 2px 4px 6px #3d3d3d23;
 }
 
 .profileTxta {
-  color: #3d3d3dc5 !important;
+  color: white !important;
 }
 
 .profile h3 {
   margin: 0 10px 0 20px;
-  color: white;
-  font-weight: 500;
-  font-size: 18px;
-  text-shadow: 2px 3px 5px #3d3d3d23;
+  color: #3d3d3d;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 .profile-active {
-  background-color: white;
+  background-color: #3d3d3d;
   width: 100%;
   height: auto;
+  font-weight: 300;
   border-radius: 5px;
   position: absolute;
   top: 60px;
-  box-shadow: 2px 5px 6px #3d3d3d13;
   left: 0;
   animation: opacity 0.5s forwards;
   transition: 1s;
@@ -288,8 +288,9 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  color: #3d3d3dc5;
-  font-size: 18px;
+  margin-left: 15px;
+  color: white;
+  font-size: 16px;
   text-decoration: none;
 }
 
@@ -308,13 +309,14 @@
 }
 
 .pop {
-  background-color: white;
+  background-color: #3d3d3d;
   width: 400px;
   height: 250px;
   border-radius: 5px;
   position: absolute;
-  top: 56px;
-  box-shadow: 2px 5px 6px #3d3d3d13;
+  font-weight: 300;
+  top: 54px;
+  color: white;
   left: -355px;
   animation: opacity 0.5s forwards;
   transition: 1s;
