--- a/projeto/Dashboard/dashboard/css/desktop.css
+++ b/projeto/Dashboard/dashboard/css/desktop.css
@@ -349,3 +349,55 @@
     margin: 0 2.5% 30px;
   }
 }
+
+.modal-container {
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 2000;
+  display: none;
+  place-items: center;
+}
+
+.modal {
+  background: white;
+  padding: 40px;
+  position: relative;
+  margin: 0 10px;
+}
+
+.fechar {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: -20px;
+  right: -5px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3d3d3d;
+  color: white;
+  cursor: pointer;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.modal-container.ativo {
+  display: grid;
+}
+
+@keyframes modal {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -30px, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.ativo .modal {
+  animation: modal 0.3s forwards;
+}
