--- a/java/moveplus/src/main/java/com/mycompany/moveplus/Telas.form
+++ b/java/moveplus/src/main/java/com/mycompany/moveplus/Telas.form
@@ -836,6 +836,7 @@
                             </Component>
                             <Component class="keeptoo.KButton" name="btnMudarStatus">
                               <Properties>
+                                <Property name="text" type="java.lang.String" value="DESATIVAR"/>
                                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                                   <Font name="Waree" size="15" style="1"/>
                                 </Property>
@@ -857,7 +858,6 @@
                                 <Property name="kStartColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                                   <Color blue="99" green="99" red="ff" type="rgb"/>
                                 </Property>
-                                <Property name="label" type="java.lang.String" value="SUSPENDER"/>
                               </Properties>
                               <Events>
                                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMudarStatusActionPerformed"/>
@@ -1104,6 +1104,7 @@
                         </Component>
                         <Component class="keeptoo.KButton" name="btnManutencao">
                           <Properties>
+                            <Property name="text" type="java.lang.String" value="Status"/>
                             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                               <Font name="Ubuntu" size="15" style="0"/>
                             </Property>
@@ -1128,7 +1129,6 @@
                             <Property name="kStartColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="ff" green="cc" red="33" type="rgb"/>
                             </Property>
-                            <Property name="label" type="java.lang.String" value="Manuten&#xe7;&#xe3;o"/>
                           </Properties>
                           <Events>
                             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnManutencaoActionPerformed"/>
